Link Pages and add HTML files

--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -5,17 +5,38 @@
 </head>
 <body>
     Hi {{ person }}! I think you're {{ compliment }}! <br>
+    <br>
     <form action="/game">
     Would you like to play a game? 
         
-            <input type="radio" name="bottons" value="yes">Yes
-            <input type="radio" name="bottons" value="no">No
+            <input type="radio" name= "botton" value="yes">Yes
+            <input type="radio" name= "botton" value="no">No
        
     </form>
     
 </body>
 </html>
 
+
+
+
+
+<!-- <!doctype html>
+<html>
+<head>
+  <title>Hi There!</title>
+</head>
+<body>
+
+<h1>Hi There!</h1>
+
+<form action="/greet">
+  What is your name? <input type="text" name="person">
+  <input type="submit">
+</form>
+
+</body>
+</html> -->
 
 
 
