--- a/templates/goodbye.html
+++ b/templates/goodbye.html
@@ -4,7 +4,7 @@
     <title></title>
 </head>
 <body>
-<a href = "/game"><h2>Bye! We are sorry to see you leave</h2></a>
+<h2>Bye! We are sorry to see you leave</h2>
 
 </body>
 </html>
