Form asking the user for words to play madlibs

--- a/templates/game.html
+++ b/templates/game.html
@@ -5,6 +5,20 @@
     <title></title>
 </head>
 <body>
-   YES lets play
+   LETS PLAY:
+
+   <br>
+   <form action="/madlib">
+         Color <input type="text" name="color"><br>
+         Noun <input type="text" name="noun"><br>
+         Adjective <input type="text" name="adj">
+
+    <br>
+   <input type="submit">
+</form>
 </body>
 </html>
+
+
+
+
