--- a/templates/game.html
+++ b/templates/game.html
@@ -9,6 +9,7 @@
 
    <br>
    <form action="/madlib">
+         Person <input type="text" name="name"><br>
          Color <input type="text" name="color"><br>
          Noun <input type="text" name="noun"><br>
          Adjective <input type="text" name="adj">
