Show players words in /madlib

--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -4,7 +4,14 @@
     <title></title>
 </head>
 <body>
-   see is this works
+   Words!<br> 
+   Person = {{name}} <br>
+   Color = {{color}} <br>
+   Noun = {{noun}} <br>
+   Abj = {{adj}} <br>
 
 </body>
 </html>
+
+
+
